# DAFR

./: README.md  benchAnalyse.py  calculateThreshold.py  freeze_requirements.txt  makeAnchor.py  maskStatGen.py  physical_convert.py  physical_evaluate.py  smaller_requirements.txt
AdvDiffFace/: README.md  pyproject.toml
AdvDiffFace/advfaceutil/: align.py  bench.py  demo.py  survey.py  train.py
AdvDiffFace/advfaceutil/benchmark/: __init__.py  args.py  base.py  benchmarks.py  checkpointing.py  factory.py  gpu.py  suite.py  suppliers.py
AdvDiffFace/advfaceutil/benchmark/augmentation/: __init__.py  base.py  flip.py  match_lighting.py  noise.py  universal.py  vary_lighting.py
AdvDiffFace/advfaceutil/benchmark/data/: __init__.py  accessory.py  base.py  benchmark.py  bin.py  (+1 more)
AdvDiffFace/advfaceutil/datasets/: __init__.py  base.py  individual.py  multiclass.py
AdvDiffFace/advfaceutil/masks/: __init__.py  mask_0.csv  mask_1.csv  mask_10.csv  mask_11.csv  mask_12.csv  mask_13.csv  mask_14.csv  mask_15.csv  mask_16.csv  mask_17.csv  mask_18.csv  mask_19.csv  mask_2.csv  mask_20.csv  mask_21.csv  mask_22.csv  mask_23.csv  mask_3.csv  mask_4.csv  mask_5.csv  mask_6.csv  mask_7.csv  mask_8.csv  mask_9.csv  mask_processing.py
AdvDiffFace/advfaceutil/recognition/: __init__.py  architectures.py  base.py  occlusion.py  training.py
AdvDiffFace/advfaceutil/ui/: __init__.py  camera.py  enum.py  trace.py
AdvDiffFace/advfaceutil/utils/: __init__.py  args.py  component.py  data.py  images.py  multiprocessing.py  patch.py
PyFaceAR/: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
PyFaceAR/src/pyfacear/: __init__.py  context.py  effect_renderer.py  landmarks.py  render_target.py  renderer.py  shader.py  texture.py  utils.py  uvproject.py
(+109 files in other folders)
