[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advfaceutil"
version = "0.1.0"
description = 'A collection of tools for creating adversarial face accessories.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [

]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "opencv-python",
    "dlib",
    "wandb",
    "scikit-image",
    "scikit-learn",
    "torch>=2.1.0",
    "torchvision",
    "imageio",
    "pillow",
    "scipy",
    "mediapipe",
    "scipy",
    "torchvision>=0.16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["advfaceutil"]
